--- a/css/estilos.css
+++ b/css/estilos.css
@@ -195,7 +195,7 @@ body{
 .cont-temas{
     padding: 20px 10px;
     height: 570px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 
 .temas{
@@ -219,7 +219,7 @@ body{
 
 .tema-activo:hover{
     cursor: pointer;
-    background: var(--claro);
+    background: var(--secundario);
 }
 
 .contenedor-temas{
@@ -234,7 +234,7 @@ body{
     left: 100%;
     width: 30px;
     height: 60px;
-    background: var(--claro);
+    background: var(--secundario);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -246,7 +246,7 @@ body{
 }
 
 .cerrar i{
-    color: var(--gris);
+    color: var(--claro);
     font-size: 28px;
 }
 
